# TerminalBot

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  Idea.MD  LICENSE  QUICK_START.md  README.md  TYPER_MIGRATION.md  pyproject.toml  requirements.txt
src/terminalbot/: __init__.py  __main__.py
src/terminalbot/agent/: __init__.py  coordinator.py  prompts.py  rule_based.py  safety.py
src/terminalbot/cli/: __init__.py  main.py  output.py
src/terminalbot/config/: __init__.py  defaults.yaml  settings.py
src/terminalbot/executor/: __init__.py  command.py
src/terminalbot/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_provider.py
src/terminalbot/plugins/: __init__.py  base.py  processes.py  system.py
src/terminalbot/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: test_executor.py  test_rule_based.py  test_safety.py
